[package]
name = "ospserver"
version = "0.1.0"
authors = ["xStarlord <xstarlord@turbochain.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
warp = "0.2.5"
ospbase = {version = "0.1.0", path = "../ospbase" }
serde_derive = "1.0.118"
handlebars = "3.5.1"
serde_json = "1.0.59"
serde = "1.0.117"
pretty_env_logger = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
tracing-subscriber = "0.2.7"
tracing-log = "0.1"
serde_derive = "1.0"
handlebars = "3.5.1"
tokio = { version = "1.0.1", features = ["macros"] }
listenfd = "0.3"